# e-coro

./: CMakeLists.txt  README.md
include/e-coro/: e_coro_ns.h
include/e-coro/core/: awaitable_trait.h  fmap.h  single_consumer_event.h  sync_wait_task.h  task.h  when_all_ready.h
include/e-coro/core/detail/: when_all_counter.h  when_all_ready_awaitable.h  when_all_task.h
test/: counted.cpp  counted.h  test_task.cpp
